# l4r9-octo

./: .gitignore  Cargo.toml  Makefile  memory.x
cube_mx/: cube_mx.ioc
scripts/: ozone_dev.jdebug  ozone_rel.jdebug
src/: emblog.rs  macros.rs  main.rs  ospi.rs  sys.rs
stm32l4/: Cargo.toml  README.md
stm32l4/src/: lib.rs
stm32l4/src/stm32l4r9/: device.x  mod.rs  octospi1.rs  octospim.rs  otg_fs_device.rs  otg_fs_global.rs
stm32l4/src/stm32l4r9/dma1/: cpar3.rs
stm32l4/src/stm32l4r9/octospi1/: cr.rs
stm32l4/src/stm32l4r9/otg_fs_device/: daintmsk.rs  diepctl0.rs
stm32l4/src/stm32l4r9/otg_fs_global/: dieptxf1.rs  dieptxf2.rs  dieptxf3.rs  gnptxfsiz_device.rs  gnptxfsiz_host.rs
stm32l4/src/stm32l4r9/rcc/: ahb3enr.rs  ahb3rstr.rs
stm32l4/src/stm32l4r9/rtc/: cr.rs
stm32l4/src/stm32l4r9/tim2/: egr.rs
stm32l4/src/stm32l4x1/: mod.rs
stm32l4/src/stm32l4x1/adc/: smpr1.rs  sqr1.rs
stm32l4/src/stm32l4x1/i2c1/: cr2.rs
stm32l4/src/stm32l4x1/tim16/: egr.rs
stm32l4/src/stm32l4x1/tim6/: cnt.rs
stm32l4/src/stm32l4x2/: mod.rs
stm32l4/src/stm32l4x2/dma1/: cmar1.rs  cmar3.rs  cmar5.rs  cpar1.rs  cpar2.rs  cpar4.rs
stm32l4/src/stm32l4x3/: mod.rs
stm32l4/src/stm32l4x3/dma1/: cpar7.rs
stm32l4/src/stm32l4x3/rcc/: apb1rstr1.rs
stm32l4/src/stm32l4x3/tim6/: arr.rs  egr.rs
stm32l4/src/stm32l4x5/: mod.rs
stm32l4/src/stm32l4x6/: mod.rs
stm32l4xx-hal/: Cargo.toml
stm32l4xx-hal/examples/: pll_config.rs
stm32l4xx-hal/src/: gpio.rs  lib.rs  prelude.rs  qspi.rs  rtc.rs  spi.rs
svd/: stm32l4r9.svd  stm32l4r9.svd.patched
(+10 files in other folders)
