[package]
authors = ["Roman M. <m3angreen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "m4mon8-n"
version = "0.1.0"

[features]
default = []
prod = []

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
nb = "0.1.2"
embedded-hal = "0.2.4"
log = "0.4.11"


[patch.crates-io.stm32l4]
path = "stm32l4"

[dependencies.jlink_rtt]
path = "jlink_rtt/rtt"

[dependencies.stm32l4xx-hal]
path = "stm32l4xx-hal"
version = "0.5"
features = ["stm32l4x6", "rt"]


[[bin]]
name = "app"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"

# Catching bugs in release
debug-assertions = true
overflow-checks = true

## Faster builds
[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = true 
incremental = true
opt-level = 0
overflow-checks = true


